--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,13 @@ cloudinary==1.32.0
 dj-database-url==1.2.0
 dj3-cloudinary-storage==0.0.6
 Django==3.2.18
-django-allauth==0.53.0
+# django-allauth==0.53.0
 django-crispy-forms==1.14.0
 django-heroku==0.3.1
 django-summernote==0.8.20.0
 gunicorn==20.1.0
 oauthlib==3.2.2
+Pillow==9.5.0
 psycopg2==2.9.5
 PyJWT==2.6.0
 python-decouple==3.8
