--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ cloudinary==1.32.0
 dj-database-url==1.2.0
 dj3-cloudinary-storage==0.0.6
 Django==3.2.18
-# django-allauth==0.53.0
+django-allauth==0.53.0
 django-crispy-forms==1.14.0
 django-heroku==0.3.1
 django-summernote==0.8.20.0
@@ -17,4 +17,4 @@ python3-openid==3.2.0
 pytz==2022.7.1
 requests-oauthlib==1.3.1
 sqlparse==0.4.3
-# whitenoise==6.4.0
+whitenoise==6.4.0
